<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>muav_gcs_offboard</name>
  <version>0.1.0</version>
  <description>Package to interface ROS </description>

  <maintainer email="arpoma167@gmail.com">Alvaro Poma</maintainer>
  <author email="arpoma167@gmail.com">Alvaro Poma</author>

  <license>BSD 3-Clause</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>muav_gcs_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
